--- a/my-app/index.html
+++ b/my-app/index.html
@@ -6,10 +6,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./dist/toggle-color-button-component.js"></script>
+    <style>
+        #box-one {
+            --toggle-color-button-len: 50px;
+            margin: 60px auto;
+            width: 400px;
+            border: solid 2px;
+        }
+
+        #box-one[data-mode="dark"] {
+            background-color: darkblue;
+            color: lightblue;
+        }
+
+        #box-two {
+            --toggle-color-button-len: 40px;
+            margin: 60px auto;
+            width: 600px;
+            border: solid 2px;
+            text-align: center;
+        }
+
+        html[data-mode="dark"] * {
+            background-color: darkslategrey;
+            color: rgb(255, 230, 0);
+
+        }
+
+        label {
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
-    <script src="./dist/toggle-color-button-component.js"></script>
+    <div id="box-one">
+        <p>ボックス内のダークモード切り替えボタン：<toggle-color-button data-toggled="#box-one"></toggle-color-button>
+        </p>
+
+    </div>
+    <div id="box-two">
+        <div>
+            画面全体のダークモード切り替えボタン：<toggle-color-button></toggle-color-button>
+        </div>
+        <p><label for="switchA">スイッチA</label><input id="switchA" type="checkbox" /></p>
+        <p><label for="switchB">スイッチB</label><input id="switchB" type="checkbox" /></p>
+        <p><label for="switchC">スイッチC</label><input id="switchC" type="checkbox" /></p>
+        <p><label for="switchD">スイッチD</label><input id="switchD" type="checkbox" /></p>
+        <hr>
+        <div>
+            <p>スイッチ稼働状態</p>
+            <p>スイッチA：<span id="result-switchA">OFF</span></p>
+            <p>スイッチB：<span id="result-switchB">OFF</span></p>
+            <p>スイッチC：<span id="result-switchC">OFF</span></p>
+            <p>スイッチD：<span id="result-switchD">OFF</span></p>
+        </div>
+
+    </div>
+    <script>
+        for (const input of document.querySelectorAll("#box-two input")) {
+            input.addEventListener("click", (event) => {
+                const state = event.currentTarget.checked;
+                document.querySelector("#result-" + event.target.id).textContent = state ? "ON" : "OFF";
+            })
+        }
+
+    </script>
 </body>
 
 </html>
